# bookstore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
